option go_package = "github.com/mohamadHarith/baking-ledger/shared/proto/transaction_processor_proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";


service TransactionProcessorService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {}
  rpc Withdraw (WithdrawRequest) returns (google.protobuf.Empty) {}
  rpc Deposit (DepositRequest) returns (google.protobuf.Empty) {}
  rpc Transfer (TransferRequest) returns (google.protobuf.Empty) {}
}

message CreateAccountRequest {
  required string userId = 1;
  required uint32 initialBalance = 2;
}

message CreateAccountResponse{
  required Account account = 1;
}

message WithdrawRequest{
  required uint32 amount = 1;
  required string userId = 2;
  required string accountId = 3;
  optional string description = 4;
}

message DepositRequest{
  required uint32 amount = 1;
  required string userId = 2;
  required string accountId = 3;
  optional string description = 4;
}

message TransferRequest{
  required uint32 amount = 1;
  required string originUserId = 2;
  required string originAccountId = 3;
  required string destinationUserId = 4;
  required string destinationAccountId = 5;
}


message Account{
  required string id = 1;
  required string userId = 2;
  required uint32 balance = 3;
  required google.protobuf.Timestamp createdAt = 4;
  required google.protobuf.Timestamp updatedAt = 5;
}